yaml/frontend/ingress/react.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app
  labels:
    app: react-app
spec:
  replicas: 3  # 변경 가능: 원하는 복제본 수
  selector:
    matchLabels:
      app: react-app
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
      - name: react-app
        image: ramdepluy2104/react:v1
        ports:
        - containerPort: 80
        # env:
        # 필요에 따라 환경 변수를 여기에 추가할 수 있습니다.
        # 예: DATABASE_URL, API_GATEWAY_URL 등
        # - name: API_GATEWAY_URL
        #   value: "http://api-gateway-service:8080"
---
apiVersion: v1
kind: Service
metadata:
  name: react-app-svc
spec:
  selector:
    app: react-app
  ports:
    - protocol: TCP
      port: 80       # 클러스터 내부에서 사용하는 포트
      targetPort: 80 # 컨테이너 내부에서 사용하는 포트
  # type: LoadBalancer # 외부 접근을 위한 서비스 타입. 클라우드 제공자에 따라 다른 타입을 사용할 수 있습니다.
